Fixes text selection in editor in dark mode

--- a/app/styles/themes/dark.styl
+++ b/app/styles/themes/dark.styl
@@ -184,6 +184,7 @@ body.theme-dark
       background-color: tertiary-background-color
       pre
         background-color: tertiary-background-color
+        z-index: -1
       .CodeMirror-placeholder
         color: #E0E2E6
       .CodeMirror-lines
